--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -36,7 +36,7 @@ header h1 .seo {
     color: #d9dcd6;
 }
 
-header div {
+header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
