--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -36,6 +36,7 @@ header h1 .seo {
     color: #d9dcd6;
 }
 
+/* replaced div tag with nav tag to match cooresponding css */
 header nav {
     padding-top: 15px;
     margin-right: 20px;
@@ -43,12 +44,12 @@ header nav {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
-
+/* replaced div tag with nav tag to match cooresponding css */
 header nav ul {
     list-style-type: none;
 }
-
-header div ul li {
+/* replaced div tag with nav tag to match cooresponding css */
+header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
