--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -82,10 +82,12 @@ p {
     margin-left: 25px;
 }
 
+/* added font size to .content section */
 .content {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
+    font-size: 16px;
 }
 
 .benefits {
