removed and condenced benefits that were repeated

--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -90,6 +90,7 @@ p {
     font-size: 16px;
 }
 
+/* added margin and color to be applied to this class */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -99,54 +100,25 @@ p {
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
-}
-
-.benefit-lead {
     margin-bottom: 32px;
-    color: #ffffff;
+    color:#ffffff
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
+/* added space in aside */
+.benefits p{
+    margin:38px;
 }
 
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
+/* removed/condenced benefits that were repeated */
+.benefits h3 {
+margin-bottom: 10px;
+text-align: center;
 }
 
-.benefit-lead h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
+/* removed/condenced benefits that were repeated */
+.benefits img {
     display: block;
     margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
 }
 
 .search-engine-optimization {
