--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -182,6 +182,7 @@ text-align: center;
     text-align: center;
 }
 
-.footer h2 {
+/* changed footer to h4 in html */
+.footer h4 {
     font-size: 20px;
 }
