added website image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,7 +100,6 @@ p {
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
-    margin-bottom: 32px;
     color:#ffffff
 }
 
@@ -119,9 +118,11 @@ text-align: center;
 .benefits img {
     display: block;
     margin: 10px auto;
+    max-width: 150px;
 }
 
-.search-engine-optimization {
+/* combines like properties */
+.search {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -130,47 +131,13 @@ text-align: center;
     color: #ffffff;
 }
 
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
+/* combines like properties */
+.content {
+    max-height:200px;
 }
 
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.search-engine-optimization img {
-    max-height: 200px;
-}
-
-.online-reputation-management img {
-    max-height: 200px;
-}
-
-.social-media-marketing img {
-    max-height: 200px;
-}
-
-.search-engine-optimization h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
+/* combines like properties */
+.content {
     margin-bottom: 20px;
     font-size: 36px;
 }
